<?xml version="1.0"?>
<package format="2">
  <name>map_localization</name>
  <version>0.1.0</version>
  <description>
    Prior-map localization for the quadruped: GICP matching of FAST-LIO odometry
    output against an ENU-aligned PCD map, with RTK (bynav INSPVAX / NavSatFix)
    global initialization and fallback. Publishes the prior_map -> odom TF and
    transforms prior-map-frame waypoints into the odom frame for the CMU stack.
  </description>

  <maintainer email="jkllage456@gmail.com">fuzhiyuan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>novatel_oem7_msgs</depend>
</package>
